# neko-ware

./: .gitignore  Cargo.toml  LEGAL.md  README.md
.github/workflows/: rolling_release.yml
crates/bcc-apk/: Cargo.toml  DEFAULT.md  README.md
crates/bcc-apk/src/: config.rs  io.rs  keys.rs  main.rs  pem.rs  readme.rs  workspace.rs
crates/bcc-apk/src/logic/: apk.rs  mod.rs  modify.rs  sign.rs
crates/bcc-apk/src/patch/: apk.rs  modify.rs  pack.rs  sign.rs
crates/bcc-pack/: Cargo.toml  README.md
crates/bcc-pack/src/: decrypt.rs  io.rs  keys.rs  main.rs  scanner.rs  workspace.rs
crates/bcc-patch/: Cargo.toml
crates/neko-apk/: DEFAULT.md
crates/neko-apk/src/: config.rs  main.rs  workspace.rs
crates/neko-apk/src/patch/: apk.rs  modify.rs  pack.rs  sign.rs
crates/neko-cloud/: Cargo.toml  README.md
crates/neko-cloud/src/: config.rs  identity.rs  io.rs  main.rs  workspace.rs
crates/neko-cloud/src/fetch/: api.rs  cloudfront.rs  download.rs  execute.rs  game.rs  mod.rs  payload.rs  update.rs
crates/neko-pack/src/: main.rs
crates/nya-apk/src/: config.rs  main.rs  workspace.rs
crates/nya-apk/src/patch/: apk.rs  mod.rs  pack.rs
