[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
version = "0.1.12"
edition = "2024"
license-file = "LICENSE"
authors = ["omochikaeri15 <251449262+omochikaeri15@users.noreply.github.com>"]
repository = "https://github.com/omochikaeri15/Neko-Ware"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"