[package]
name = "bcc-apk"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
nyanko = { version = "0.2.3", features = ["pack"] }
serde = { version = "1.0.228", features = ["derive"] }
md5 = "0.8.0"
serde_json = "1.0.150"
zip = "9.0.0-pre2"
thiserror = "2.0.18"
image = { version = "0.25.10", default-features = false, features = ["png"] }
hex = "0.4.3"
anyhow = "1.0.102"
byteorder = "1.5.0"
rasn-pkix = "0.28.13"
rsa = "0.10.0-rc.18"
sha2 = "0.11.0"
base64 = "0.22.1"
rayon = "1.12.0"
rasn = "0.28.13"
resand = "0.3.0"