[package]
name = "bcc-apk"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
nyanko = { version = "0.2.3", features = ["pack"] }
serde = { version = "1.0.228", features = ["derive"] }
md5 = "0.8.0"
serde_json = "1.0.150"
zip = "8.6.0"
thiserror = "2.0.18"
image = { version = "0.25.10", default-features = false, features = ["png"] }
hex = "0.4.3"
anyhow = "1.0.102"
byteorder = "1.5.0"
rasn-pkix = "0.28.13"
rsa = "0.9.10"
rand_core = { version = "0.6.4", features = ["getrandom"] }
sha2 = { version = "0.10.9", features = ["oid"] }
base64 = "0.22.1"
rayon = "1.12.0"
rasn = "0.28.13"
resand = "0.3.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json"] }
colored = "3.1.1"