[package]
name = "bcc-pack"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
md5 = "0.8.0"
nyanko = { version = "0.2.3", features = ["pack"] }
zip = "8.6.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json"] }
colored = "3.1.1"