[package]
name = "neko-cloud"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "gzip"] }
rsa = { version = "0.9", features = ["sha1", "pem"] }
sha1 = "0.10"
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.3"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
colored = "3.1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
futures = "0.3.32"
